fix homepage spacing, fonts

--- a/app/assets/styles/core/_footer.scss
+++ b/app/assets/styles/core/_footer.scss
@@ -24,6 +24,7 @@
   }
   &__description {
     color: #fff;
+    font-weight: $base-font-regular;
   }
   .form__input-group {
     width: 280px;
