--- a/app/assets/styles/core/_typography.scss
+++ b/app/assets/styles/core/_typography.scss
@@ -191,6 +191,10 @@ mark, .mark {
   border-radius: $base-border-radius;
 }
 
+.italic {
+  font-style: italic;
+}
+
 
 /* Abbreviation
    ========================================================================== */
